fixing mobile view bleeding

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -32,7 +32,6 @@
         &-container {
             width: 100%;
             padding: 1rem;
-            align-content: center;
 
             @include tablet{
             width: 50%;
